updated hidden files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 codefuse/__pycache__/
 env/
 main/__pycache__/
+main/__pycache__/forms.cpython-37.pyc
+main/__pycache__/models.cpython-37.pyc
+main/__pycache__/urls.cpython-37.pyc
+main/__pycache__/views.cpython-37.pyc
