--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,16 @@ chardet==3.0.4
 dj-database-url==0.5.0
 Django==3.0.6
 django-cors-headers==3.2.1
+django-heroku==0.3.1
 django-oauth-toolkit==1.3.2
 emoji==0.5.4
+gunicorn==20.0.4
 idna==2.9
 oauthlib==3.1.0
+psycopg2==2.8.5
 python-dotenv==0.13.0
 pytz==2020.1
 requests==2.23.0
 sqlparse==0.3.1
 urllib3==1.25.9
+whitenoise==5.0.1
